--- a/src/renderer/styles/Sidebar.css
+++ b/src/renderer/styles/Sidebar.css
@@ -1,38 +1,35 @@
-.sidebar-wrapper {
-	height: 100vh;
-	width: fit-content;
-	overflow-y: scroll;
+.sidebar {
+  background-color: var(--secondary-color);
+
+  width: 55px;
+  height: 100vh;
+  padding: 5px;
+  z-index: 1;
+  overflow: scroll;
 }
 
-.profile {
-	margin: 10px;
-	background-color: #2c2c2c;
-	border-radius: 50%;
-	height: 50px;
-	aspect-ratio: 1;
+.sidebar > * {
+  margin: 5px auto;
 }
 
-.profile:hover {
-	border-radius: 30%;
+.sidebar-item {
+  background-color: var(--primary-color);
+
+  border-radius: 50%;
+  width: 100%;
+  aspect-ratio: 1;
+  transition: 0.2s;
 }
 
-.sidebar-wrapper > * {
-	transition: 0.2s;
-	cursor: pointer;
+.sidebar-item:hover {
+  border-radius: 25%;
+  cursor: pointer;
 }
-
-/* .sidebar-wrapper:hover > *:not(:hover) {
-  opacity: 0.6;
-} */
 
 .sidebar-item-separator {
-	width: 50%;
-	height: 3px;
-	border-radius: 2.5px;
-	background-color: #222222;
-	margin: auto;
-}
+  background-color: var(--primary-color);
 
-.create-group-chat:hover {
-	background-color: #03bfa7;
+  width: 75%;
+  height: 2.5px;
+  border-radius: 3px;
 }
