--- a/src/renderer/styles/Register.css
+++ b/src/renderer/styles/Register.css
@@ -40,13 +40,13 @@
 	color: black;
 	padding: 10px 15px;
 	font-family: inherit;
-	font-size: 100%;
+	font-size: 80%;
 }
 
 .registration-form input[type='submit'] {
 	margin-top: 15px;
 	cursor: pointer;
-	font-weight: bold;
+	font-weight: 800;
 	transition: 0.2s;
 }
 
