Added exchange key registration

--- a/src/renderer/styles/index.css
+++ b/src/renderer/styles/index.css
@@ -27,10 +27,11 @@ body {
 
 ::selection {
 	background: rgb(58, 41, 126);
-  color: white;
+	color: white;
 }
 
 * {
+	transition: 0.2s;
 	box-sizing: border-box;
 	user-select: none;
 	/* transition: 0.2s */
