--- a/src/renderer/styles/ProfilePicture.css
+++ b/src/renderer/styles/ProfilePicture.css
@@ -1,8 +1,10 @@
 .profile-picture-container {
     background-color: var(--primary-color);
+
 	width: 100%;
     max-width: 200px;
 	aspect-ratio: 1;
+    color: var(--primary-font);
 }
 
 .profile-picture-container img {
@@ -13,8 +15,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-weight: bolder;
-    font-size: 120%;
+    font-weight: 800;
+    font-size: 100%;
 	height: 100%;
     width: 100%;
 }
