--- a/src/renderer/styles/Chat.css
+++ b/src/renderer/styles/Chat.css
@@ -61,7 +61,7 @@
 	overflow-x: hidden;
 	height: fit-content;
 	display: flex;
-	flex-direction: column;
+	flex-direction: column-reverse;
 	padding-bottom: 80px;
 }
 
