--- a/src/renderer/styles/ChatBubble.css
+++ b/src/renderer/styles/ChatBubble.css
@@ -2,12 +2,12 @@
 	width: 100%;
 	display: flex;
 	font-size: 80%;
-	gap: 10px;
 	letter-spacing: 0.2px;
-	padding: 7px 25px;
+	padding: 7px 30px;
 	transition: 0.2s;
 	animation: slide 0.2s ease-out forwards;
 	align-items: center;
+	justify-content: space-between;
 }
 
 @keyframes slide {
@@ -25,11 +25,18 @@
 	background-color: var(--highlight);
 }
 
+.chat-bubble-container:hover .message-time {
+	opacity: 0.7;
+}
+
 .message-time {
-	width: 30px;
+	width: fit-content;
 	min-width: 30px;
 	text-align: end;
 	font-size: 10px;
+	font-weight: bold;
+	opacity: 0;
+	transition: 0.2s;
 }
 
 .message-author {
@@ -47,4 +54,10 @@
 	user-select: text;
 	font-weight: 500;
 	cursor: default;
+}
+
+.chat-bubble-message {
+	display: flex;
+	align-items: center;
+	gap: 10px;
 }
