Added icons and about page

--- a/src/renderer/styles/Sidebar.css
+++ b/src/renderer/styles/Sidebar.css
@@ -20,6 +20,9 @@
 	aspect-ratio: 1;
 	transition: 0.2s;
 	overflow: hidden;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 
 	/* animation: grow 0.2s ease-out forwards; */
 }
