--- a/src/renderer/styles/Picture.css
+++ b/src/renderer/styles/Picture.css
@@ -1,14 +1,19 @@
 .profile-picture-container {
     background-color: var(--primary-color);
 
-	width: 100%;
-    max-width: 200px;
+	height: 100%;
+    max-height: 200px;
 	aspect-ratio: 1;
     color: white;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .profile-picture-container img {
     object-fit: contain;
+	height: 100%;
 }
 
 .profile-picture-container div {
