Fixed profile picture

--- a/src/renderer/styles/Settings.css
+++ b/src/renderer/styles/Settings.css
@@ -20,5 +20,10 @@
 
 	width: 150px;
 	height: 150px;
-	object-fit: contain;
+	object-fit: cover;
+}
+
+.image-display img {
+	display: flex;
+	align-self: center;
 }
