--- a/src/renderer/styles/ContactCard.css
+++ b/src/renderer/styles/ContactCard.css
@@ -32,9 +32,11 @@
 	border-radius: var(--default-round);
 	background-color: var(--input-color);
 
-	min-width: 80px;
-	min-height: 80px;
+	min-width: 90px;
+	min-height: 90px;
+	aspect-ratio: 1;
 	overflow: hidden;
+	display: flex;
 }
 
 .contact-card-meta-container {
